Output cleaned data to sets folder

--- a/data/data_cleaning.ipynb
+++ b/data/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "[1337 rows x 7 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "insuranceData = pd.read_csv(\"../sets/insurance_raw.csv\")\n",
+    "insuranceData = pd.read_csv(\"sets/insurance_raw.csv\")\n",
     "\n",
     "sexes = [\"female\", \"male\"]\n",
     "smoker = [\"no\", \"yes\"]\n",
@@ -212,8 +212,16 @@
     "insuranceData[\"smoker\"].replace(smoker, [0, 1], inplace = True)\n",
     "insuranceData[\"region\"].replace(regions, [0, 1, 2, 3], inplace = True)\n",
     "\n",
+    "insuranceData.to_csv(\"sets/insurance_clean.csv\", index = False)\n",
     "insuranceData"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
