Split data into train and test sets and move pca stuff to separate file

--- a/data/pca.ipynb
+++ b/data/pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,18 @@
     "from sklearn.decomposition import PCA\n",
     "import mpl_toolkits.mplot3d\n",
     "\n",
-    "cleanInsurance = pd.read_csv(\"sets/insurance_clean.csv\")"
+    "cleanInsurance = pd.read_csv(\"sets/insurance_clean.csv\")\n",
+    "\n",
+    "featureNames = list(cleanInsurance.columns)\n",
+    "featureNames.pop()\n",
+    "\n",
+    "features = cleanInsurance.loc[:, featureNames]\n",
+    "targets = cleanInsurance[\"charges\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
