--- a/data/data_cleaning.ipynb
+++ b/data/data_cleaning.ipynb
@@ -2,218 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>children</th>\n",
-       "      <th>smoker</th>\n",
-       "      <th>region</th>\n",
-       "      <th>charges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27.900</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16884.92400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.770</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1725.55230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>28</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4449.46200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22.705</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>21984.47061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28.880</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3866.85520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1333</th>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30.970</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10600.54830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1334</th>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31.920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2205.98080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1335</th>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36.850</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1629.83350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1336</th>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.800</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2007.94500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1337</th>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29.070</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>29141.36030</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1337 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      age  sex     bmi  children  smoker  region      charges\n",
-       "0      19    0  27.900         0       1       2  16884.92400\n",
-       "1      18    1  33.770         1       0       1   1725.55230\n",
-       "2      28    1  33.000         3       0       1   4449.46200\n",
-       "3      33    1  22.705         0       0       3  21984.47061\n",
-       "4      32    1  28.880         0       0       3   3866.85520\n",
-       "...   ...  ...     ...       ...     ...     ...          ...\n",
-       "1333   50    1  30.970         3       0       3  10600.54830\n",
-       "1334   18    0  31.920         0       0       0   2205.98080\n",
-       "1335   18    0  36.850         0       0       1   1629.83350\n",
-       "1336   21    0  25.800         0       0       2   2007.94500\n",
-       "1337   61    0  29.070         0       1       3  29141.36030\n",
-       "\n",
-       "[1337 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Clean Insurance Data ###\n",
     "\n",
-    "insuranceData = pd.read_csv(\"sets/insurance_raw.csv\")\n",
+    "insurance = pd.read_csv(\"sets/insurance_raw.csv\")\n",
     "\n",
     "sexes = [\"female\", \"male\"]\n",
     "smoker = [\"no\", \"yes\"]\n",
     "regions = [\"northeast\", \"southeast\", \"southwest\", \"northwest\"]\n",
     "\n",
     "# Remove rows with missing values\n",
-    "insuranceData = insuranceData.dropna()\n",
+    "insurance = insurance.dropna()\n",
     "\n",
     "# Remove duplicate rows\n",
-    "insuranceData = insuranceData.drop_duplicates()\n",
+    "insurance = insurance.drop_duplicates()\n",
     "\n",
     "# Remove rows with bad or impossible data\n",
-    "ageFilter = insuranceData[\"age\"].between(0, 130)\n",
-    "insuranceData = insuranceData[ageFilter]\n",
+    "ageFilter = insurance[\"age\"].between(0, 130)\n",
+    "insurance = insurance[ageFilter]\n",
     "\n",
-    "sexFilter = insuranceData[\"sex\"].isin(sexes)\n",
-    "insuranceData = insuranceData[sexFilter]\n",
+    "sexFilter = insurance[\"sex\"].isin(sexes)\n",
+    "insurance = insurance[sexFilter]\n",
     "\n",
-    "bmiFilter = insuranceData[\"bmi\"].between(7, 200)\n",
-    "insuranceData = insuranceData[bmiFilter]\n",
+    "bmiFilter = insurance[\"bmi\"].between(7, 200)\n",
+    "insurance = insurance[bmiFilter]\n",
     "\n",
-    "smokerFilter = insuranceData[\"smoker\"].isin(smoker)\n",
-    "insuranceData = insuranceData[smokerFilter]\n",
+    "smokerFilter = insurance[\"smoker\"].isin(smoker)\n",
+    "insurance = insurance[smokerFilter]\n",
     "\n",
-    "regionFilter = insuranceData[\"region\"].isin(regions)\n",
-    "insuranceData = insuranceData[regionFilter]\n",
+    "regionFilter = insurance[\"region\"].isin(regions)\n",
+    "insurance = insurance[regionFilter]\n",
     "\n",
-    "costFilter = insuranceData[\"charges\"].gt(0)\n",
-    "insuranceData = insuranceData[costFilter]\n",
+    "costFilter = insurance[\"charges\"].gt(0)\n",
+    "insurance = insurance[costFilter]\n",
     "\n",
     "# One hot encode some features to put them in more usable format\n",
-    "insuranceData[\"sex\"].replace(sexes, [0, 1], inplace = True)\n",
-    "insuranceData[\"smoker\"].replace(smoker, [0, 1], inplace = True)\n",
-    "insuranceData[\"region\"].replace(regions, [0, 1, 2, 3], inplace = True)\n",
+    "insurance[\"sex\"].replace(sexes, [0, 1], inplace = True)\n",
+    "insurance[\"smoker\"].replace(smoker, [0, 1], inplace = True)\n",
+    "insurance[\"region\"].replace(regions, [0, 1, 2, 3], inplace = True)\n",
     "\n",
-    "insuranceData.to_csv(\"sets/insurance_clean.csv\", index = False)\n",
-    "insuranceData"
+    "insurance.to_csv(\"sets/insurance_clean.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Split clean data into train and test sets ###\n",
+    "\n",
+    "cleanInsurance = pd.read_csv(\"sets/insurance_clean.csv\")\n",
+    "\n",
+    "featureNames = list(cleanInsurance.columns)\n",
+    "featureNames.pop()\n",
+    "\n",
+    "features = cleanInsurance.loc[:, featureNames]\n",
+    "targets = cleanInsurance[\"charges\"]\n",
+    "\n",
+    "trainX, testX, trainY, testY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
+    "\n",
+    "trainData = pd.concat([trainX, trainY], axis = 1)\n",
+    "testData = pd.concat([testX, testY], axis = 1)\n",
+    "\n",
+    "trainData.to_csv(\"sets/insurance_train.csv\", index = False)\n",
+    "testData.to_csv(\"sets/insurance_test.csv\", index = False)"
    ]
   },
   {
