Added new data set with different encoding

--- a/data/data_cleaning.ipynb
+++ b/data/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Fully encode data for use in unsupervised learning ###\n",
+    "\n",
+    "insurance = pd.read_csv(\"sets/insurance_clean.csv\")\n",
+    "insurance[\"region\"].replace([0, 1, 2, 3], regions, inplace = True)\n",
+    "\n",
+    "expandedFeatures = pd.get_dummies(insurance)\n",
+    "regionColumns = expandedFeatures.columns[-4:]\n",
+    "splitRegions = expandedFeatures.loc[:, regionColumns]\n",
+    "\n",
+    "temp = insurance.drop(columns = [\"region\", \"charges\"])\n",
+    "encodedInsurance = pd.concat([temp, splitRegions, insurance[\"charges\"]], axis = 1)\n",
+    "\n",
+    "encodedInsurance.to_csv(\"sets/insurance_encoded.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Split clean data into train and test sets ###\n",
     "\n",
-    "cleanInsurance = pd.read_csv(\"sets/insurance_clean.csv\")\n",
+    "cleanInsurance = pd.read_csv(\"sets/insurance_encoded.csv\")\n",
     "\n",
     "featureNames = list(cleanInsurance.columns)\n",
     "featureNames.pop()\n",
