Use standard scaler again and look at clustering statistics

--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "categorical = [\"sex\", \"smoker\", \"region_northeast\", \"region_northwest\", \"region_southeast\", \"region_southwest\"]\n",
     "categoricalData = encodedInsurance[categorical]\n",
     "\n",
-    "scaler = MinMaxScaler()\n",
+    "scaler = StandardScaler()\n",
     "scaledNumerical = scaler.fit_transform(numericalData)\n",
     "numericalData = pd.DataFrame(scaledNumerical)\n",
     "numericalData.columns = numerical\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
