--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "categorical = [\"sex\", \"smoker\", \"region_northeast\", \"region_northwest\", \"region_southeast\", \"region_southwest\"]\n",
     "categoricalData = encodedInsurance[categorical]\n",
     "\n",
-    "scaler = StandardScaler()\n",
+    "scaler = MinMaxScaler()\n",
     "scaledNumerical = scaler.fit_transform(numericalData)\n",
     "numericalData = pd.DataFrame(scaledNumerical)\n",
     "numericalData.columns = numerical\n",
