Split different scales into separate datasets

--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +96,19 @@
     "\n",
     "scaler = MinMaxScaler()\n",
     "scaledNumerical = scaler.fit_transform(numericalData)\n",
-    "numericalData = pd.DataFrame(scaledNumerical)\n",
-    "numericalData.columns = numerical\n",
+    "scaledNumerical = pd.DataFrame(scaledNumerical)\n",
+    "scaledNumerical.columns = numerical\n",
     "\n",
-    "scaledFeatures = pd.concat([numericalData, categoricalData], axis = 1)\n",
-    "scaledFeatures.to_csv(\"sets/insurance_features_scaled.csv\", index = False)"
+    "scaledFeatures = pd.concat([scaledNumerical, categoricalData], axis = 1)\n",
+    "scaledFeatures.to_csv(\"sets/insurance_mmx_scaled.csv\", index = False)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaledNumerical = scaler.fit_transform(numericalData)\n",
+    "scaledNumerical = pd.DataFrame(scaledNumerical)\n",
+    "scaledNumerical.columns = numerical\n",
+    "\n",
+    "scaledFeatures = pd.concat([scaledNumerical, categoricalData], axis = 1)\n",
+    "scaledFeatures.to_csv(\"sets/insurance_std_scaled.csv\", index = False)"
    ]
   },
   {
