High/low train/test split, initial linear regression

--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Split encoded data into train and test sets ###\n",
+    "### Split encoded data into training and testing sets ###\n",
     "\n",
+    "# Value that separates low-to-medium and high cost insurance (chosen after EDA and clustering)\n",
+    "chargesSplit = 15000\n",
     "encodedInsurance = pd.read_csv(\"sets/insurance_encoded.csv\")\n",
     "\n",
     "featureNames = list(encodedInsurance.columns)\n",
@@ -129,11 +131,27 @@
     "\n",
     "trainX, testX, trainY, testY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
     "\n",
-    "trainData = pd.concat([trainX, trainY], axis = 1)\n",
-    "testData = pd.concat([testX, testY], axis = 1)\n",
+    "trainInsurance = pd.concat([trainX, trainY], axis = 1)\n",
+    "testInsurance = pd.concat([testX, testY], axis = 1)\n",
     "\n",
-    "trainData.to_csv(\"sets/insurance_train.csv\", index = False)\n",
-    "testData.to_csv(\"sets/insurance_test.csv\", index = False)"
+    "trainInsurance.to_csv(\"sets/insurance_train.csv\", index = False)\n",
+    "testInsurance.to_csv(\"sets/insurance_test.csv\", index = False)\n",
+    "\n",
+    "highTrainFilter = trainInsurance[\"charges\"] > chargesSplit\n",
+    "highTrain = trainInsurance[highTrainFilter]\n",
+    "highTestFilter = testInsurance[\"charges\"] > chargesSplit\n",
+    "highTest = testInsurance[highTestFilter]\n",
+    "\n",
+    "highTrain.to_csv(\"sets/insurance_high_train.csv\", index = False)\n",
+    "highTest.to_csv(\"sets/insurance_high_test.csv\", index = False)\n",
+    "\n",
+    "lowTrainFilter = trainInsurance[\"charges\"] <= chargesSplit\n",
+    "lowTrain = trainInsurance[lowTrainFilter]\n",
+    "lowTestFilter = testInsurance[\"charges\"] <= chargesSplit\n",
+    "lowTest = testInsurance[lowTestFilter]\n",
+    "\n",
+    "lowTrain.to_csv(\"sets/insurance_low_train.csv\", index = False)\n",
+    "lowTest.to_csv(\"sets/insurance_low_test.csv\", index = False)"
    ]
   },
   {
