--- a/models/supervised/random_forest.ipynb
+++ b/models/supervised/random_forest.ipynb
@@ -2,6 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "## TODO: Create automated search for best hyper parameters\n",
+    "\n",
+    "model = RandomForestRegressor(\n",
+    "    n_estimators = 100,\n",
+    "    criterion = \"mse\",\n",
+    "    max_depth = 5,\n",
+    "    max_features = \"auto\",\n",
+    "    bootstrap = True,\n",
+    "    random_state = 0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.848680896502563\n",
+      "MSE: 25456347.255823486\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Predict insurance costs for all charges ###\n",
+    "\n",
+    "trainInsurance = pd.read_csv(\"../../data/sets/insurance_train.csv\")\n",
+    "testInsurance = pd.read_csv(\"../../data/sets/insurance_test.csv\")\n",
+    "\n",
+    "trainX = trainInsurance.drop(columns = [\"charges\"])\n",
+    "trainY = trainInsurance[\"charges\"]\n",
+    "\n",
+    "testX = testInsurance.drop(columns = [\"charges\"])\n",
+    "testY = testInsurance[\"charges\"]\n",
+    "\n",
+    "model.fit(trainX, trainY)\n",
+    "predictions = model.predict(testX)\n",
+    "\n",
+    "print(\"R2 score: \" + str(r2_score(testY, predictions)))\n",
+    "print(\"MSE: \" + str(mean_squared_error(testY, predictions)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.8188259608395568\n",
+      "MSE: 19895056.730614893\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Predict insurance costs for high charges ###\n",
+    "\n",
+    "highTrain = pd.read_csv(\"../../data/sets/insurance_high_train.csv\")\n",
+    "highTest = pd.read_csv(\"../../data/sets/insurance_high_test.csv\")\n",
+    "\n",
+    "highTrainX = highTrain.drop(columns = [\"charges\"])\n",
+    "highTrainY = highTrain[\"charges\"]\n",
+    "\n",
+    "highTestX = highTest.drop(columns = [\"charges\"])\n",
+    "highTestY = highTest[\"charges\"]\n",
+    "\n",
+    "model.fit(highTrainX, highTrainY)\n",
+    "predictions = model.predict(highTestX)\n",
+    "\n",
+    "print(\"R2 score: \" + str(r2_score(highTestY, predictions)))\n",
+    "print(\"MSE: \" + str(mean_squared_error(highTestY, predictions)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.8780241629669132\n",
+      "MSE: 1709711.561956907\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Predict insurance costs for low-to-medium charges ###\n",
+    "\n",
+    "lowTrain = pd.read_csv(\"../../data/sets/insurance_low_train.csv\")\n",
+    "lowTest = pd.read_csv(\"../../data/sets/insurance_low_test.csv\")\n",
+    "\n",
+    "lowTrainX = lowTrain.drop(columns = [\"charges\"])\n",
+    "lowTrainY = lowTrain[\"charges\"]\n",
+    "\n",
+    "lowTestX = lowTest.drop(columns = [\"charges\"])\n",
+    "lowTestY = lowTest[\"charges\"]\n",
+    "\n",
+    "model.fit(lowTrainX, lowTrainY)\n",
+    "predictions = model.predict(lowTestX)\n",
+    "\n",
+    "print(\"R2 score: \" + str(r2_score(lowTestY, predictions)))\n",
+    "print(\"MSE: \" + str(mean_squared_error(lowTestY, predictions)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
