Scale train/test data for understandable results, correct high/low set splits

--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,10 +114,20 @@
     "# Value that separates low-to-medium and high cost insurance (chosen after EDA and clustering)\n",
     "chargesSplit = 15000\n",
     "encodedInsurance = pd.read_csv(\"sets/insurance_encoded.csv\")\n",
+    "columns = encodedInsurance.columns\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "encodedInsurance = scaler.fit_transform(encodedInsurance)\n",
+    "encodedInsurance = pd.DataFrame(encodedInsurance)\n",
+    "encodedInsurance.columns = columns\n",
+    "\n",
+    "# This is how the chargesSplit is scaled, if you know a better way feel free to change\n",
+    "splitScale = np.array([chargesSplit for i in range(10)])[np.newaxis, :]\n",
+    "splitScale = scaler.transform(splitScale)\n",
+    "chargesSplit = splitScale[0, -1]\n",
     "\n",
     "featureNames = list(encodedInsurance.columns)\n",
     "featureNames.pop()\n",
-    "\n",
     "features = encodedInsurance.loc[:, featureNames]\n",
     "targets = encodedInsurance[\"charges\"]\n",
     "\n",
@@ -129,18 +139,34 @@
     "trainInsurance.to_csv(\"sets/insurance_train.csv\", index = False)\n",
     "testInsurance.to_csv(\"sets/insurance_test.csv\", index = False)\n",
     "\n",
-    "highTrainFilter = trainInsurance[\"charges\"] > chargesSplit\n",
-    "highTrain = trainInsurance[highTrainFilter]\n",
-    "highTestFilter = testInsurance[\"charges\"] > chargesSplit\n",
-    "highTest = testInsurance[highTestFilter]\n",
+    "# High cost\n",
+    "\n",
+    "highFilter = encodedInsurance[\"charges\"] > chargesSplit\n",
+    "highInsurance = encodedInsurance[highFilter]\n",
+    "\n",
+    "features = highInsurance.loc[:, featureNames]\n",
+    "targets = highInsurance[\"charges\"]\n",
+    "\n",
+    "highTrainX, highTestX, highTrainY, highTestY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
+    "\n",
+    "highTrain = pd.concat([highTrainX, highTrainY], axis = 1)\n",
+    "highTest = pd.concat([highTestX, highTestY], axis = 1)\n",
     "\n",
     "highTrain.to_csv(\"sets/insurance_high_train.csv\", index = False)\n",
     "highTest.to_csv(\"sets/insurance_high_test.csv\", index = False)\n",
     "\n",
-    "lowTrainFilter = trainInsurance[\"charges\"] <= chargesSplit\n",
-    "lowTrain = trainInsurance[lowTrainFilter]\n",
-    "lowTestFilter = testInsurance[\"charges\"] <= chargesSplit\n",
-    "lowTest = testInsurance[lowTestFilter]\n",
+    "# Low-to-medium cost\n",
+    "\n",
+    "lowFilter = encodedInsurance[\"charges\"] <= chargesSplit\n",
+    "lowInsurance = encodedInsurance[lowFilter]\n",
+    "\n",
+    "features = lowInsurance.loc[:, featureNames]\n",
+    "targets = lowInsurance[\"charges\"]\n",
+    "\n",
+    "lowTrainX, lowTestX, lowTrainY, lowTestY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
+    "\n",
+    "lowTrain = pd.concat([lowTrainX, lowTrainY], axis = 1)\n",
+    "lowTest = pd.concat([lowTestX, lowTestY], axis = 1)\n",
     "\n",
     "lowTrain.to_csv(\"sets/insurance_low_train.csv\", index = False)\n",
     "lowTest.to_csv(\"sets/insurance_low_test.csv\", index = False)"
