--- a/models/supervised/linear_regression.ipynb
+++ b/models/supervised/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.7530385567240125\n",
-      "MSE: 41546216.66086841\n"
+      "R2 score: 0.7512391524454374\n",
+      "MSE: 0.2855585853189675\n"
      ]
     }
    ],
@@ -48,15 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.6631802991021044\n",
-      "MSE: 36986795.06404388\n"
+      "R2 score: 0.523778812882556\n",
+      "MSE: 0.32619300467652074\n"
      ]
     }
    ],
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8635385710070257\n",
-      "MSE: 1912753.2844653714\n"
+      "R2 score: 0.8714053183165895\n",
+      "MSE: 0.013970763792166227\n"
      ]
     }
    ],
