--- a/models/supervised/random_forest.ipynb
+++ b/models/supervised/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.848680896502563\n",
-      "MSE: 25456347.255823486\n"
+      "R2 score: 0.8487162234314796\n",
+      "MSE: 0.17366230113499678\n"
      ]
     }
    ],
@@ -57,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8188259608395568\n",
-      "MSE: 19895056.730614893\n"
+      "R2 score: 0.8015644598747842\n",
+      "MSE: 0.13592063272079782\n"
      ]
     }
    ],
@@ -90,15 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8780241629669132\n",
-      "MSE: 1709711.561956907\n"
+      "R2 score: 0.883167523351007\n",
+      "MSE: 0.0126928961069735\n"
      ]
     }
    ],
