Fix train/test scaling

--- a/data/data_preparation.ipynb
+++ b/data/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,61 +113,41 @@
     "\n",
     "# Value that separates low-to-medium and high cost insurance (chosen after EDA and clustering)\n",
     "chargesSplit = 15000\n",
-    "encodedInsurance = pd.read_csv(\"sets/insurance_encoded.csv\")\n",
-    "columns = encodedInsurance.columns\n",
-    "\n",
     "scaler = StandardScaler()\n",
-    "encodedInsurance = scaler.fit_transform(encodedInsurance)\n",
-    "encodedInsurance = pd.DataFrame(encodedInsurance)\n",
-    "encodedInsurance.columns = columns\n",
     "\n",
-    "# This is how the chargesSplit is scaled, if you know a better way feel free to change\n",
-    "splitScale = np.array([chargesSplit for i in range(10)])[np.newaxis, :]\n",
-    "splitScale = scaler.transform(splitScale)\n",
-    "chargesSplit = splitScale[0, -1]\n",
+    "def getTrainTest(insurance):\n",
+    "    columns = insurance.columns\n",
+    "    insurance = scaler.fit_transform(insurance)\n",
+    "    insurance = pd.DataFrame(insurance)\n",
+    "    insurance.columns = columns\n",
+    "    \n",
+    "    featureNames = list(insurance.columns)\n",
+    "    featureNames.pop()\n",
+    "    features = insurance.loc[:, featureNames]\n",
+    "    targets = insurance[\"charges\"]\n",
     "\n",
-    "featureNames = list(encodedInsurance.columns)\n",
-    "featureNames.pop()\n",
-    "features = encodedInsurance.loc[:, featureNames]\n",
-    "targets = encodedInsurance[\"charges\"]\n",
+    "    trainX, testX, trainY, testY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
     "\n",
-    "trainX, testX, trainY, testY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
+    "    train = pd.concat([trainX, trainY], axis = 1)\n",
+    "    test = pd.concat([testX, testY], axis = 1)\n",
+    "    \n",
+    "    return train, test\n",
     "\n",
-    "trainInsurance = pd.concat([trainX, trainY], axis = 1)\n",
-    "testInsurance = pd.concat([testX, testY], axis = 1)\n",
-    "\n",
-    "trainInsurance.to_csv(\"sets/insurance_train.csv\", index = False)\n",
-    "testInsurance.to_csv(\"sets/insurance_test.csv\", index = False)\n",
-    "\n",
-    "# High cost\n",
-    "\n",
+    "encodedInsurance = pd.read_csv(\"sets/insurance_encoded.csv\")\n",
     "highFilter = encodedInsurance[\"charges\"] > chargesSplit\n",
     "highInsurance = encodedInsurance[highFilter]\n",
-    "\n",
-    "features = highInsurance.loc[:, featureNames]\n",
-    "targets = highInsurance[\"charges\"]\n",
-    "\n",
-    "highTrainX, highTestX, highTrainY, highTestY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
-    "\n",
-    "highTrain = pd.concat([highTrainX, highTrainY], axis = 1)\n",
-    "highTest = pd.concat([highTestX, highTestY], axis = 1)\n",
-    "\n",
-    "highTrain.to_csv(\"sets/insurance_high_train.csv\", index = False)\n",
-    "highTest.to_csv(\"sets/insurance_high_test.csv\", index = False)\n",
-    "\n",
-    "# Low-to-medium cost\n",
-    "\n",
     "lowFilter = encodedInsurance[\"charges\"] <= chargesSplit\n",
     "lowInsurance = encodedInsurance[lowFilter]\n",
     "\n",
-    "features = lowInsurance.loc[:, featureNames]\n",
-    "targets = lowInsurance[\"charges\"]\n",
+    "train, test = getTrainTest(encodedInsurance)\n",
+    "train.to_csv(\"sets/insurance_train.csv\", index = False)\n",
+    "test.to_csv(\"sets/insurance_test.csv\", index = False)\n",
     "\n",
-    "lowTrainX, lowTestX, lowTrainY, lowTestY = train_test_split(features, targets, test_size = 0.2, random_state = 0)\n",
+    "highTrain, highTest = getTrainTest(highInsurance)\n",
+    "highTrain.to_csv(\"sets/insurance_high_train.csv\", index = False)\n",
+    "highTest.to_csv(\"sets/insurance_high_test.csv\", index = False)\n",
     "\n",
-    "lowTrain = pd.concat([lowTrainX, lowTrainY], axis = 1)\n",
-    "lowTest = pd.concat([lowTestX, lowTestY], axis = 1)\n",
-    "\n",
+    "lowTrain, lowTest = getTrainTest(lowInsurance)\n",
     "lowTrain.to_csv(\"sets/insurance_low_train.csv\", index = False)\n",
     "lowTest.to_csv(\"sets/insurance_low_test.csv\", index = False)"
    ]
