--- a/models/supervised/random_forest.ipynb
+++ b/models/supervised/random_forest.ipynb
@@ -2,37 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "import pandas as pd\n",
     "\n",
-    "## TODO: Create automated search for best hyper parameters\n",
+    "params = dict(\n",
+    "    n_estimators = [i for i in range(100, 201)],\n",
+    "    max_features = [0.5, 0.6, 0.7, 0.8, 0.9, \"auto\"],\n",
+    "    max_depth = [i for i in range(2, 11)],\n",
+    "    min_samples_split = [i for i in range(2, 11)],\n",
+    "    min_samples_leaf = [i for i in range(1, 11)]\n",
+    ")\n",
     "\n",
-    "model = RandomForestRegressor(\n",
-    "    n_estimators = 100,\n",
-    "    criterion = \"mse\",\n",
-    "    max_depth = 5,\n",
-    "    max_features = \"auto\",\n",
-    "    bootstrap = True,\n",
-    "    random_state = 0,\n",
-    ")"
+    "estimator = RandomForestRegressor(random_state = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8487162234314796\n",
-      "MSE: 0.17366230113499678\n"
+      "Best Training Score: 0.8591608362814774\n",
+      "Best Params: {'n_estimators': 189, 'min_samples_split': 8, 'min_samples_leaf': 7, 'max_features': 0.8, 'max_depth': 6}\n",
+      "R2 score: 0.8506520046956237\n",
+      "MSE: 0.17144017106625783\n"
      ]
     }
    ],
@@ -48,24 +50,35 @@
     "testX = testInsurance.drop(columns = [\"charges\"])\n",
     "testY = testInsurance[\"charges\"]\n",
     "\n",
-    "model.fit(trainX, trainY)\n",
-    "predictions = model.predict(testX)\n",
+    "randomSearch = RandomizedSearchCV(\n",
+    "    estimator = estimator, \n",
+    "    param_distributions = params, \n",
+    "    n_iter = 200, \n",
+    "    random_state = 0\n",
+    ")\n",
     "\n",
+    "randomSearch.fit(trainX, trainY)\n",
+    "predictions = randomSearch.predict(testX)\n",
+    "\n",
+    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
+    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
     "print(\"R2 score: \" + str(r2_score(testY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(testY, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8024139484186532\n",
-      "MSE: 0.16703202843163079\n"
+      "Best Training Score: 0.8340333620008297\n",
+      "Best Params: {'n_estimators': 139, 'min_samples_split': 10, 'min_samples_leaf': 2, 'max_features': 0.8, 'max_depth': 10}\n",
+      "R2 score: 0.8366161395403259\n",
+      "MSE: 0.1381187457675087\n"
      ]
     }
    ],
@@ -81,24 +94,35 @@
     "highTestX = highTest.drop(columns = [\"charges\"])\n",
     "highTestY = highTest[\"charges\"]\n",
     "\n",
-    "model.fit(highTrainX, highTrainY)\n",
-    "predictions = model.predict(highTestX)\n",
+    "randomSearch = RandomizedSearchCV(\n",
+    "    estimator = estimator, \n",
+    "    param_distributions = params, \n",
+    "    n_iter = 200, \n",
+    "    random_state = 0\n",
+    ")\n",
     "\n",
+    "randomSearch.fit(highTrainX, highTrainY)\n",
+    "predictions = randomSearch.predict(highTestX)\n",
+    "\n",
+    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
+    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
     "print(\"R2 score: \" + str(r2_score(highTestY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(highTestY, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score: 0.8834759379448794\n",
-      "MSE: 0.12413219833856234\n"
+      "Best Training Score: 0.9029538149922793\n",
+      "Best Params: {'n_estimators': 176, 'min_samples_split': 3, 'min_samples_leaf': 1, 'max_features': 0.7, 'max_depth': 9}\n",
+      "R2 score: 0.8803258565871266\n",
+      "MSE: 0.12748795608496002\n"
      ]
     }
    ],
@@ -114,9 +138,18 @@
     "lowTestX = lowTest.drop(columns = [\"charges\"])\n",
     "lowTestY = lowTest[\"charges\"]\n",
     "\n",
-    "model.fit(lowTrainX, lowTrainY)\n",
-    "predictions = model.predict(lowTestX)\n",
+    "randomSearch = RandomizedSearchCV(\n",
+    "    estimator = estimator, \n",
+    "    param_distributions = params, \n",
+    "    n_iter = 200, \n",
+    "    random_state = 0\n",
+    ")\n",
     "\n",
+    "randomSearch.fit(lowTrainX, lowTrainY)\n",
+    "predictions = randomSearch.predict(lowTestX)\n",
+    "\n",
+    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
+    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
     "print(\"R2 score: \" + str(r2_score(lowTestY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(lowTestY, predictions)))"
    ]
