--- a/models/supervised/ann.ipynb
+++ b/models/supervised/ann.ipynb
@@ -2,39 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "import pandas as pd\n",
     "\n",
-    "params = dict(\n",
-    "    n_estimators = [i for i in range(100, 201)],\n",
-    "    max_features = [0.5, 0.6, 0.7, 0.8, 0.9, \"auto\"],\n",
-    "    max_depth = [i for i in range(2, 11)],\n",
-    "    min_samples_split = [i for i in range(2, 11)],\n",
-    "    min_samples_leaf = [i for i in range(1, 11)]\n",
-    ")\n",
+    "# TODO: Optimize neural network hyperparameters using RandomizedSearch\n",
+    "params = dict()\n",
     "\n",
-    "model = RandomForestRegressor(random_state = 0)"
+    "model = MLPRegressor(max_iter = 1000, random_state = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Training Score: 0.8593153001811272\n",
-      "Best Params: {'n_estimators': 116, 'min_samples_split': 7, 'min_samples_leaf': 10, 'max_features': 0.8, 'max_depth': 6}\n",
-      "R2 score: 0.8499593222371465\n",
-      "MSE: 0.17223531799095473\n"
+      "R2 score: 0.8398357795599951\n",
+      "MSE: 0.18385637714765932\n"
      ]
     }
    ],
@@ -50,35 +43,24 @@
     "testX = testInsurance.drop(columns = [\"charges\"])\n",
     "testY = testInsurance[\"charges\"]\n",
     "\n",
-    "randomSearch = RandomizedSearchCV(\n",
-    "    estimator = model, \n",
-    "    param_distributions = params, \n",
-    "    n_iter = 300, \n",
-    "    random_state = 0\n",
-    ")\n",
+    "model.fit(trainX, trainY)\n",
+    "predictions = model.predict(testX)\n",
     "\n",
-    "randomSearch.fit(trainX, trainY)\n",
-    "predictions = randomSearch.predict(testX)\n",
-    "\n",
-    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
-    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
     "print(\"R2 score: \" + str(r2_score(testY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(testY, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Training Score: 0.8340333620008297\n",
-      "Best Params: {'n_estimators': 139, 'min_samples_split': 10, 'min_samples_leaf': 2, 'max_features': 0.8, 'max_depth': 10}\n",
-      "R2 score: 0.8366161395403259\n",
-      "MSE: 0.1381187457675087\n"
+      "R2 score: 0.6744277107659492\n",
+      "MSE: 0.2752269172680151\n"
      ]
     }
    ],
@@ -94,35 +76,25 @@
     "highTestX = highTest.drop(columns = [\"charges\"])\n",
     "highTestY = highTest[\"charges\"]\n",
     "\n",
-    "randomSearch = RandomizedSearchCV(\n",
-    "    estimator = model, \n",
-    "    param_distributions = params, \n",
-    "    n_iter = 300, \n",
-    "    random_state = 0\n",
-    ")\n",
+    "model.fit(highTrainX, highTrainY)\n",
+    "predictions = model.predict(highTestX)\n",
     "\n",
-    "randomSearch.fit(highTrainX, highTrainY)\n",
-    "predictions = randomSearch.predict(highTestX)\n",
-    "\n",
-    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
-    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
+    "# Bad metrics here is probably due to small data size, likely nothing we can do about it\n",
     "print(\"R2 score: \" + str(r2_score(highTestY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(highTestY, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Training Score: 0.9029538149922793\n",
-      "Best Params: {'n_estimators': 176, 'min_samples_split': 3, 'min_samples_leaf': 1, 'max_features': 0.7, 'max_depth': 9}\n",
-      "R2 score: 0.8803258565871266\n",
-      "MSE: 0.12748795608496002\n"
+      "R2 score: 0.8871506269466325\n",
+      "MSE: 0.12021758005326458\n"
      ]
     }
    ],
@@ -138,18 +110,9 @@
     "lowTestX = lowTest.drop(columns = [\"charges\"])\n",
     "lowTestY = lowTest[\"charges\"]\n",
     "\n",
-    "randomSearch = RandomizedSearchCV(\n",
-    "    estimator = model, \n",
-    "    param_distributions = params, \n",
-    "    n_iter = 300, \n",
-    "    random_state = 0\n",
-    ")\n",
+    "model.fit(lowTrainX, lowTrainY)\n",
+    "predictions = model.predict(lowTestX)\n",
     "\n",
-    "randomSearch.fit(lowTrainX, lowTrainY)\n",
-    "predictions = randomSearch.predict(lowTestX)\n",
-    "\n",
-    "print(\"Best Training Score: \" + str(randomSearch.best_score_))\n",
-    "print(\"Best Params: \" + str(randomSearch.best_params_))\n",
     "print(\"R2 score: \" + str(r2_score(lowTestY, predictions)))\n",
     "print(\"MSE: \" + str(mean_squared_error(lowTestY, predictions)))"
    ]
